# Face-Recognition-Drone

./: CMakeLists.txt  README.md  test.cpp
FaceSelect/: .CMakeLists.txt.swp  CMakeLists.txt  FaceLandmarkVid.cpp  FaceSelect.cpp  GimbalUtil.cpp  GimbalUtil.h
camera/: CMakeLists.txt  build.sh
uart/: more_ports.txt  ports.txt  t  test.cpp
